--- a/index.html
+++ b/index.html
@@ -4,23 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Saya - Ringga Budi Utama</title>
-    <img src="Ringga_Budi_Utama.jpg" alt="" weight="100" height=950 wide="50">
+<div style="text-align: center;">
+  <img src="Ringga_Budi_Utama.jpg" alt="Ringga Budi Utama" width="300">
+</div>
+
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #000000; /* Biru muda untuk fresh */
+            background-color: #f6f9ff; /* Biru muda untuk fresh */
             color: #000000;
             line-height: 1.6;
         }
         header {
-            background: linear-gradient(to right, #eae7e7, #000000); /* Gradient hijau energik */
-            color: rgb(255, 255, 255);
+            background: linear-gradient(to right, #eae7e7, #f1eded); /* Gradient hijau energik */
+            color: rgb(0, 0, 0);
             text-align: center;
             padding: 60px 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(203, 160, 160, 0.1);
         }
         header h1 {
             margin: 0;
@@ -32,19 +35,19 @@
             font-size: 1.2em;
         }
         nav {
-            background-color: #01080f;
+            background-color: #2d59aa;
             padding: 15px;
             text-align: center;
         }
         nav a {
-            color: white;
+            color: rgb(225, 225, 225);
             margin: 0 20px;
             text-decoration: none;
             font-weight: bold;
             transition: color 0.3s;
         }
         nav a:hover {
-            color: #168730;
+            color: #c8decd;
         }
         section {
             padding: 50px 20px;
@@ -57,7 +60,7 @@
         }
         h2 {
             color: #000000;
-            border-bottom: 2px solid #28a745;
+            border-bottom: 2px solid #000000;
             padding-bottom: 10px;
         }
         ul {
@@ -71,7 +74,7 @@
             margin-top: 20px;
         }
         .contact a {
-            color: #28a745;
+            color: #413737;
             text-decoration: none;
             font-weight: bold;
         }
@@ -112,7 +115,7 @@
             display: inline-block;
             margin: 10px;
             padding: 15px 30px;
-            background-color: #28a745;
+            background-color: #5989e9;
             color: white;
             text-decoration: none;
             border-radius: 25px;
